--- a/modal.css
+++ b/modal.css
@@ -13,7 +13,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   margin: 0 auto;
@@ -29,49 +28,47 @@ img {
 
 .topnav {
   overflow: hidden;
-  margin: 3.5%;
+  margin: 3.5% auto;
+  width: 86%;
+  display: flex;
+  justify-content: space-between;
 }
-.header-logo {
-    float: left;
-}
-.main-navbar {
-    float: right;
+.header-logo img{
+  width: 38vmin;
 }
 .topnav a {
-  float: left;
   display: block;
-  color: #000000;
+  color: red;
   text-align: center;
   padding: 12px 12px;
   margin: 5px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 2.5vmin;
   font-family: Roboto, sans-serif;
 }
-
-.topnav a:hover {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
-.topnav a.active {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
 .topnav .icon {
   display: none;
 }
+.main-navbar{
+  display: flex;
+}
+.active{
+  background: red;
+  color: white !important;
+  border-radius: 10px;
+}
+.active::after{
+  content: "";
+  width: 100%;
+  display: block;
+  background: white;
+  height: 1.7px;
+  position: relative;
+  z-index: 1000;
+}
 main {
-  font-size: 2em;
   font-weight: bolder;
   color: black;
-  padding-top: 0.5vw;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
 }
@@ -114,12 +111,11 @@ main {
   background: #3876ac;
 }
 
-.smFont {
+/* .smFont {
   font-size: 16px;
-}
+} */
 
 .bground {
-  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -129,7 +125,12 @@ main {
   overflow: auto;
   background-color: rgba(26, 39, 156, 0.4);
 }
-
+.hide{
+  display: none;
+}
+.showing{
+  display: block !important;
+}
 .content {
   margin: 5% auto;
   width: 100%;
@@ -170,7 +171,7 @@ input {
   font-size: 20px;
   height: 48px;
 }
-.formData[data-error]::after {
+/* .formData[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
   color: #e54858;
@@ -186,18 +187,21 @@ input {
   opacity: 1;
 }
 .formData[data-error-visible="true"] .text-control {
-  border: 2px solid #e54858;
-}
+  border: 2px solid #FF4E60;
+} */
 .messageApproved{
   margin: 78% 0;
   text-align: center;
 }
-/* 
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+.error{
+  margin-top: 2%;
+  font-size: 12px;
+  color: #FF4E60;
+  font-weight: lighter;
+}
+.messageApproved{
+  font-weight: 100;
+}
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -367,67 +371,60 @@ input[data-error]::after {
 }
 .hero-section {
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: flex;
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  margin: auto 7vw;
 }
 .hero-content {
-  /* padding: 51px 0 0 67px; */
-  grid-column: span 4;
+  padding: 51px 0 64px 67px;
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  width: 100%;
+  width: 40%;
 }
-/* .hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-} */
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
 .hero-headline {
-  font-size: 8rem;
+  font-size: 7.5vw;
   font-weight: bold;
-  white-space: nowrap;
-  line-height: 1.5;
+  position: absolute;
+  top: 5%;
+  width: 75vmax;
 }
 .hero-text {
-  width: 100%;
+  width: 31vw;
   font-weight: normal;
-  margin-top: 15%;
   padding: 0;
-}
+  position: absolute;
+  top: 50%;
+  font-size: 2vw;
+  }
 .btn-signup {
   outline: none;
   text-transform: capitalize;
-  font-size: 2.3rem;
+  font-size: 2.3vw;
   padding: 15px 23px;
   margin: 0;
-  margin-top: 20%;
+  position: absolute;
+  top: 85%;
 }
 .hero-img {
-  grid-column: span 8;
+  width: 60%;
 }
 .hero-img img {
   width: 100%;
-  /* height: 100%; */
   display: block;
   padding: 0;
 }
 .copyrights {
   color: #fe142f;
   padding: 0;
-  font-size: 1rem;
+  font-size: 2.5vmin;
   margin: 60px 0 30px;
   font-weight: bolder;
 }
@@ -439,33 +436,51 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
+
+
+
+
+@media screen and (max-width: 1070px) {
+  .topnav{
+    margin: 6.5% auto 2%;
+    width: 86%;
   }
-}
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
+  .topnav a {
+    font-size: 4.5vmin;
   }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .topnav a.icon {
+    display: block;
+    margin-top: 5px;
+    font-size: 6vmin;
+  }
+  .header-logo{
+    align-self: center;
+  }
+  .header-logo img {
+    width: 35vmin;
+  }
+  .main-navbar{
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    right: 0;
-    top: 0;
+    z-index: 100;
+    background: white;
+    right: 10%;
+    top: 13%;
+    border: 1px solid rgb(148, 148, 148);
+    box-shadow: 3px 8px 10px 2px rgb(138, 138, 138);
+    transform: translateY(-200%);
   }
-  .topnav.responsive a {
-    float: none;
+  .active{
+    background: white;
+    color: red !important;
+  }
+  .active-animation{
+    animation: modalopen .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) 0s 1 normal forwards;
+  }
+  .main-navbar a {
     display: block;
-    text-align: left;
   }
-}
-@media screen and (max-width: 800px) {
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -475,44 +490,62 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
-  }
-  .hero-content::after {
-    content: unset;
+    width: 100%;
+    padding:0 20px;
   }
   .hero-content .btn-signup {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
+    position: static;
+    width: 100%;
   }
   .hero-text {
-    width: unset;
+    width: 100%;
     font-size: 1.5rem;
+    position: static;
+    margin-top: 10%;
+  }
+  .hero-img{
+    width: auto;
   }
   .hero-img img {
     border-radius: 10px;
-    margin-top: 40px;
+    width: 88%;
+    margin: 5% auto;
   }
   .hero-section > .btn-signup {
     display: block;
     margin: 32px auto 10px;
     padding: 12px 35px;
+    position: static;
+    font-size: 1em;
+  }
+  .content{
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+  }
+  label{
+    font-size: 3vmin;
   }
   .copyrights {
     margin-top: 50px;
     text-align: center;
+    font-size: 13px;
   }
 }
 
 @keyframes modalopen {
   from {
     opacity: 0;
-    transform: translateY(-150px);
+    transform: translateY(-100%);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
