--- a/modal.css
+++ b/modal.css
@@ -170,24 +170,6 @@ input {
   font-size: 20px;
   height: 48px;
 }
-/* .formData[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.4em;
-  color: #e54858;
-  display: block;
-  margin-top: 7px;
-  margin-bottom: 7px;
-  text-align: right;
-  line-height: 0.3;
-  opacity: 0;
-  transition: 0.3s;
-}
-.formData[data-error-visible="true"]::after {
-  opacity: 1;
-}
-.formData[data-error-visible="true"] .text-control {
-  border: 2px solid #FF4E60;
-} */
 .messageApproved{
   margin: 78% 0;
   text-align: center;
@@ -410,7 +392,7 @@ input {
   padding: 15px 23px;
   margin: 0;
   position: absolute;
-  top: 85%;
+  bottom: 10%;
   z-index: auto;
 }
 .hero-img {
@@ -438,13 +420,12 @@ footer {
 
 
 
-@media (max-width: 860px) {
+@media (max-width: 1025px) {
   .topnav{
-    margin: 6.5% auto 2%;
-    padding-top: 2%;
+    padding-top: 5%;
     width: 86%;
     position: fixed;
-    top: -4%;
+    top: -5vh;
     z-index: 1;
     background: white;
     width: 100%;
@@ -458,6 +439,9 @@ footer {
     margin-top: 5px;
     font-size: 6vmin;
     margin-right: 6%;
+  }
+  main{
+    position: relative;
   }
   .header-logo{
     align-self: center;
@@ -498,13 +482,13 @@ footer {
     color: #000;
     width: 100%;
     padding:0 20px;
+    position: static;
   }
   .hero-content .btn-signup {
     display: block;
-    /* top:184%;
-    right: 30%; */
-    margin: 114% 27%;
     font-size: 1em;
+    bottom: 1.5%;
+    right: 32%;
   }
   .hero-headline {
     font-size: 3.5rem;
@@ -526,13 +510,6 @@ footer {
     width: 88%;
     margin: 5% auto;
   }
-  .hero-section > .btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
-    position: static;
-    font-size: 1em;
-  }
   .content{
     margin: 18% auto 0;
     padding: 0;
@@ -551,14 +528,12 @@ footer {
   }
 }
 
-@media (min-width: 500px){
-  .topnav{
-    margin: 3.5% auto 2% !important;
-  }
+@media screen and (min-width: 500px) and (max-width:900px){
   .hero-content .btn-signup{
-    margin: 100% 35% !important;
+      right:41% !important;
   }
 }
+
 @keyframes modalopen {
   from {
     opacity: 0;
